2014-01-13  Daniel Colascione  <dancol@dancol.org>

	* textprop.c (Fremove_list_of_text_properties): Correctly
	handle reaching the end of the interval tree. (Bug#15344)

2014-01-13  Martin Rudalics  <rudalics@gmx.at>

	* xdisp.c (resize_mini_window): Round height to a multiple of
	frame's line height.  Fix bug in calculation of window start
	position (Bug#16424).

2014-01-13  Jan Djärv  <jan.h.d@swipnet.se>

	* macfont.m: Include termchar.h.
	(CG_SET_FILL_COLOR_WITH_FACE_FOREGROUND)
	(CG_SET_FILL_COLOR_WITH_FACE_BACKGROUND)
	(CG_SET_STROKE_COLOR_WITH_FACE_FOREGROUND): Modified from
	*_WITH_GC_* to take face and f as parameters.
	(macfont_draw): Check for DRAW_MOUSE_FACE and set face accordingly.
	Use *_WITH_FACE_*, and pass face as parameter (Bug#16425).

2014-01-13  Daniel Colascione  <dancol@dancol.org>

	Fix menu item updating in the presence of the Unity global menu
	GTK+ module.

	* gtkutil.h (xg_have_tear_offs): Add frame parameter
	* gtkutil.c (xg_have_tear_offs): Count the global menu as a
	tear-off.
	(xg_update_menubar,xg_update_menu_item): Call g_object_notify when
	updating menus; explain why.
	(xg_update_frame_menubar): Remove the 23px hack: I can't repro the
	problem it's supposed to solve and it interferes with detecting
	the presence of a global menu.
	* xmenu.c (set_frame_menubar): Call xg_have_tear_offs with new
	parameter.

2014-01-11  K. Handa  <handa@gnu.org>

	* composite.c (composition_update_it): Fix indexing of
	LGSTRING_CHAR (Bug#15984).

2014-01-11  Fabrice Popineau  <fabrice.popineau@gmail.com>

	* unexw32.c (_start) [__MINGW64__]: Define to __start.

2014-01-11  Eli Zaretskii  <eliz@gnu.org>

	* xdisp.c (try_window_id): Don't use this function's optimizations
	if overlays in the buffer displayed by the window have changed
	since last redisplay.  (Bug#16347)
	(message_dolog): Fix indentation.

2014-01-11  Martin Rudalics  <rudalics@gmx.at>

	* frame.c (frame_resize_pixelwise): Fix doc-string.
